--- a/client/hls.html
+++ b/client/hls.html
@@ -15,7 +15,7 @@
   <body style="margin: 0">
     <video width="100%" id="video" controls autoplay></video>
     <script>
-      const src = '/tmp/reolink-white.m3u8';
+      const src = '/tmp/stream.m3u8';
       const hlsConfig = {
         enableWorker: true, // use workers
         autoStartLoad: true, // auto play on load
